[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/chat/chat.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/lobby/lobby_ui.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/vera-bold-25.tres" type="DynamicFont" id=3]
[ext_resource path="res://game/lobby/lobby.gd" type="Script" id=4]

[node name="LobbyNode" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="chat" parent="." instance=ExtResource( 1 )]

[node name="Lobby" type="Control" parent="."]
margin_left = 245.0
margin_top = 5.0
margin_right = 1027.0
margin_bottom = 598.0

[node name="List" type="ItemList" parent="Lobby"]
margin_top = 20.0
margin_right = 773.0
margin_bottom = 571.0

[node name="join" type="Button" parent="Lobby"]
margin_left = 131.0
margin_top = 571.0
margin_right = 206.0
margin_bottom = 591.0
rect_pivot_offset = Vector2( 38, 7 )
text = "Join"

[node name="Refresh" type="Button" parent="Lobby"]
margin_left = 35.0
margin_top = 571.0
margin_right = 110.0
margin_bottom = 591.0
rect_pivot_offset = Vector2( 38, 7 )
text = "Refresh"

[node name="Create" type="Button" parent="Lobby"]
anchor_left = -0.312
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 926.984
margin_top = 571.0
margin_right = -17.0
margin_bottom = -2.0
text = "New Game"

[node name="Label" type="Label" parent="Lobby"]
margin_top = -4.0
margin_right = 774.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Games"
align = 1
valign = 1

[node name="GameName" type="LineEdit" parent="Lobby"]
margin_left = 507.0
margin_top = 571.0
margin_right = 669.0
margin_bottom = 595.0

[node name="Client" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="disconnect_from_game" from="chat" to="Client" method="disconnect_from_host"]
[connection signal="pressed" from="Lobby/Refresh" to="Client" method="refresh_lobby"]
[connection signal="pressed" from="Lobby/Create" to="Client" method="create_game"]
[connection signal="ready" from="Client" to="Client" method="_connect_to_lobby_service"]
